WIP refactor header so that the active link  uses jekyll \n refactor team page so that it can house multiple employees and works on all devices \n make form it's own include and add to layout so that it's not duplicated code on each page. \n fix font sizes so they look a little nicer and work on mobile sizes better

--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -15,7 +15,7 @@ html {
 
 body {
   font-family: 'Work Sans', sans-serif;
-  font-size: 14pt;
+  font-size: 1em;
   height: 100%;
   width: 100%;
   overflow: scroll;
@@ -23,17 +23,17 @@ body {
 
 
   @media (min-width: $tablet) {
-    font-size: 16pt;
+    font-size: 1.2em;
   }
 
   @media (min-width: $desktop) {
-    font-size: 18pt;
+    font-size: 1.4em;
   }
 }
 
 p {
   line-height: 1.6;
-  font-weight: 200;
+  font-weight: 400;
   color: $brand-black;
 }
 
@@ -62,29 +62,33 @@ h1 {
 h2 {
   color: $brand-black;
   font-weight: 200;
-  font-size: 22pt;
+  font-size: 2em;
+
+  @media (min-width: $tablet){
+    font-size: 2.5em;
+  }
 
   @media (min-width: $desktop){
-    font-size: 44pt;
+    font-size: 2.2em;
     letter-spacing: -2px;
   }
 }
 
 h3 {
   color: $brand-black;
-  font-weight: 400;
+  font-weight: 600;
   margin: 0;
 
   @media (min-width: $mobile){
-    font-size: 18pt;
+    // font-size: 18pt;
   }
 
   @media (min-width: $tablet){
-    font-size: 24pt;
+    // font-size: 24pt;
   }
 
   @media (min-width: $desktop){
-    font-size: 26pt;
+    // font-size: 26pt;
     letter-spacing: -2px;
   }
 }
@@ -108,4 +112,5 @@ blockquote {
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
