--- a/assets/stylesheets/components/_containers.scss
+++ b/assets/stylesheets/components/_containers.scss
@@ -34,6 +34,14 @@
   padding-right: 0.5rem;
   position: relative;
   z-index: 1;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+
+  @media(min-width: $tablet) {
+    padding-top: 4rem;
+    padding-bottom: 3rem;
+  }
+
 }
 
 .third {
