--- a/assets/stylesheets/pages/about/about.scss
+++ b/assets/stylesheets/pages/about/about.scss
@@ -5,30 +5,67 @@
 
   display: flex;
   flex-direction: column;
+  margin-bottom: 3rem;
 
   @media(min-width: $tablet) {
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
   }
+
+  @media(min-width: $desktop) {
+    flex-direction: row;
+    align-items: center;
+  }
+
 
   &__photo {
     width: 100%;;
-    @media(min-width: $tablet) {
+    position: relative;
+
+    @media(min-width: $desktop) {
       width:33.33%;
     }
 
     &-img {
-      margin-top: 0.5rem;
-      max-height: 250px;
+      max-height: 223px;
       overflow: hidden;
+
+      @media(min-width: $tablet) {
+        max-height: 350px;
+      }
+
+      @media(min-width: $desktop) {
+        max-height: 248px;
+      }
+    }
+
+    &-contact-icons {
+      padding-top: .5rem;
+      padding-bottom: .5rem;
+      padding-left: 0.5rem;
+      background: rgba(185, 20, 25, 0.5);
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+
+      &__icon {
+        padding-left: 0.5rem;
+      }
     }
   }
 
   &__content {
     width: 100%;
+    padding-top: 1rem;
+
     @media(min-width: $tablet) {
-      width: 48%;
+      width: 95%;
+    }
+
+    @media(min-width: $desktop) {
+      width: 70%;
       margin-left: 2rem;
+      padding-top: 0;
     }
 
 
@@ -41,10 +78,10 @@
     }
 
     &__bio {
-      margin-top: 0.5rem;
+      margin: 0.5rem 0 0 0;
 
       @media(min-width: $tablet) {
-        font-size: 16px;
+        font-size: 0.8em;
       }
     }
   }
